add login and register page (basic html/css)

--- a/web-client/src/styles/header.scss
+++ b/web-client/src/styles/header.scss
@@ -6,7 +6,7 @@ $secondaryTextColor: #FFF;
 $containerWidth: 100%;
 
 .containerHeader{
-    width: $containerWidth;
+    width: 100vw;
     margin-top: 0;
     height: 10vh;
     background-color: $backgroundColor;
