--- a/frontend/client/src/app/global-components/header/header.component.html
+++ b/frontend/client/src/app/global-components/header/header.component.html
@@ -21,5 +21,11 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a *ngIf = "userIsLoggedIn" class="nav-link" (click) = "goLK()">Личный кабинет</a>
+        </li>
+      </ul>
+      
     </div>
   </nav>
