--- a/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
+++ b/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
@@ -2,8 +2,10 @@
     <div class="formGroup">
         <div class="input-group mb-3">
             <input [(ngModel)] = "newStackName" type="text" class="form-control" placeholder="Новый стек" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button (click) = "onClick()" class="btn btn-outline-secondary" type="button" id="button-addon2">Добавить</button>
+            <button (click) = "onClick()" class="btn btn-outline-secondary ml-2" type="button" id="button-addon2">Добавить</button>
+            <button class="btn btn-primary ml-2" (click) = "logout()">Выйти</button>
         </div>
+        
     </div>
     <ul *ngIf = "returnedOrders$ | async as orders" class="list-group">
         <li *ngFor = "let order of orders" class="list-group-item">{{order.title}}</li>
