add default tabels

--- a/frontend/client/src/app/pages/personal/components/output-orders/output-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/output-orders/output-orders.component.html
@@ -1,4 +1,4 @@
-<p>Исходящие заказы</p>
+<p>Выполненные для вас заказы</p>
 <ul class="list-group">
     <li class="list-group-item">Cras justo odio</li>
     <li class="list-group-item">Dapibus ac facilisis in</li>
