--- a/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
@@ -1,1 +1,8 @@
-<p>process-orders works!</p>
+<p>Открытые вами заказы</p>
+<ul class="list-group">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+</ul>
