--- a/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
@@ -1,4 +1,4 @@
-<p>Выполненные заказы</p>
+<p>Выполненные вами заказы</p>
 <ul class="list-group">
     <li class="list-group-item">Cras justo odio</li>
     <li class="list-group-item">Dapibus ac facilisis in</li>
