--- a/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
+++ b/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
@@ -13,6 +13,7 @@
             </div>
             <div class="row">
                 <app-user-orders [currentBlock] = 'chosenTable'></app-user-orders>
+                <app-opened-customer-orders></app-opened-customer-orders>
                 <app-output-orders [currentBlock] = 'chosenTable'></app-output-orders>
                 <app-process-orders [currentBlock] = 'chosenTable'></app-process-orders>
                 <app-returned-orders [currentBlock] = 'chosenTable'></app-returned-orders>
