--- a/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
@@ -1,6 +1,6 @@
 <p>Открытые вами заказы</p>
 <ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Cras justo odio<button type="button" class="btn btn-primary">Закрыть</button></li>
     <li class="list-group-item">Dapibus ac facilisis in</li>
     <li class="list-group-item">Morbi leo risus</li>
     <li class="list-group-item">Porta ac consectetur ac</li>
