--- a/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
@@ -1,6 +1,6 @@
 <p>Выполненные вами заказы</p>
 <ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Cras justo odio<button type="button" class="btn btn-primary">Обжаловать</button><button type="button" class="btn btn-primary">Подтвердить выполнение</button></li>
     <li class="list-group-item">Dapibus ac facilisis in</li>
     <li class="list-group-item">Morbi leo risus</li>
     <li class="list-group-item">Porta ac consectetur ac</li>
