make switching betwin tables

--- a/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
+++ b/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
@@ -12,11 +12,11 @@
                 
             </div>
             <div class="row">
-                <app-user-orders [currentBlock] = 'chosenTable'></app-user-orders>
-                <app-opened-customer-orders></app-opened-customer-orders>
-                <app-output-orders [currentBlock] = 'chosenTable'></app-output-orders>
-                <app-process-orders [currentBlock] = 'chosenTable'></app-process-orders>
-                <app-returned-orders [currentBlock] = 'chosenTable'></app-returned-orders>
+                <app-user-orders id="table0" *ngIf="chosenTable==0"></app-user-orders>
+                <app-opened-customer-orders *ngIf="chosenTable==1"></app-opened-customer-orders>
+                <app-output-orders *ngIf="chosenTable==2"></app-output-orders>
+                <app-process-orders *ngIf="chosenTable==3"></app-process-orders>
+                <app-returned-orders *ngIf="chosenTable==4"></app-returned-orders>
             </div>
         </div>
         
