a lot of user page changes

--- a/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
+++ b/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
@@ -8,7 +8,7 @@
         
     </div>
     <ul *ngIf = "returnedOrders$ | async as orders" class="list-group">
-        <li *ngFor = "let order of orders" class="list-group-item">{{order.title}}</li>
+        <li *ngFor = "let order of orders" class="list-group-item">{{order.title}} <button type="button" class="btn btn-primary">Обжаловать</button><button type="button" class="btn btn-primary">Подтвердить выполнение</button></li>
     </ul>
 </div>
 
