--- a/frontend/client/src/app/pages/personal/components/opened-customer-orders/opened-customer-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/opened-customer-orders/opened-customer-orders.component.html
@@ -1,8 +1,36 @@
 <p>Открытые вам заказы</p>
 <ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
-  </ul>
+  <li class="list-group-item" *ngFor = "let order of orders; let i = index">{{order.title}} <button class="btn btn-lg btn-outline-primary" (click)="open(content); chooseOrder(i)">Закрыть</button></li>
+</ul>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Закрытие заказа</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Название заказа: {{orders[chosenOrder].title}}</p>
+    <p>Описание заказа: {{orders[chosenOrder].description}}</p>
+    <p>Дедлайн заказа: {{orders[chosenOrder].deadline}}</p>
+    <form>
+      <div class="form-group">
+        <label for="dateOfBirth">Комментарий</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="dateOfBirth">Рейтинг</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control">
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+
