--- a/frontend/client/src/app/pages/personal/components/user-info/user-info.component.html
+++ b/frontend/client/src/app/pages/personal/components/user-info/user-info.component.html
@@ -22,10 +22,6 @@
               <input formControlName = "username" type="text" class="form-control" >
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Пароль</label>
-                <input formControlName = "password" type="password" class="form-control" >
-            </div>
-            <div class="form-group">
                 <label for="exampleInputPassword1">Имя</label>
                 <input formControlName = "firstName" type="text" class="form-control" >
             </div>
@@ -53,14 +49,15 @@
           <div class="form-group">
             <label for="">Технологии, которыми вы владеете</label>
             <br>
+            <p class="border pl-2" *ngFor = "let tech of user.technology">{{tech.name}}</p>
             <select *ngFor = "let stak of chosenStacks; let i = index" name="select" [(ngModel)] = chosenStacks[i] class="custom-select w-25">
                 <option *ngFor = "let stack of stacks" [ngValue]="stack.id">{{stack.name}}</option>
             </select>
-            <button (click) = "addStack()" class="btn btn-primary" (click) = "hui()">Добавить </button>
+            <button (click) = "addStack()" class="btn btn-primary">Добавить </button>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); changeUserData()">Изменить</button>
+          <button type="button" class="btn btn-outline-dark" (click)="changeUserData(); modal.close('Save click')">Изменить</button>
         </div>
       </ng-template>
       <button type="submit" class="btn btn-primary" (click)="open(changing)">Изменить данные</button>
@@ -90,10 +87,7 @@
         <div class="form-group">
           <label for="dateOfBirth">Дедлайн</label>
           <div class="input-group">
-            <input formControlName = "deadline" id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
-            </div>
+            <input formControlName = "deadline" id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" >
           </div>
         </div>
       </form>
