--- a/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
+++ b/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
@@ -17,6 +17,7 @@
                 <app-output-orders *ngIf="chosenTable==2"></app-output-orders>
                 <app-process-orders *ngIf="chosenTable==3"></app-process-orders>
                 <app-returned-orders *ngIf="chosenTable==4"></app-returned-orders>
+                <app-orders-to-approve *ngIf="chosenTable==5"></app-orders-to-approve>
             </div>
         </div>
         
