--- a/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
+++ b/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
@@ -8,7 +8,32 @@
         
     </div>
     <ul *ngIf = "returnedOrders$ | async as orders" class="list-group">
-        <li *ngFor = "let order of orders" class="list-group-item">{{order.title}} <button type="button" class="btn btn-primary">Обжаловать</button><button type="button" class="btn btn-primary">Подтвердить выполнение</button></li>
+        <li *ngFor = "let order of orders" class="list-group-item">{{order.title}} <button class="btn btn-lg btn-outline-primary" (click)="open(content); chooseOrder(i)">Закрыть</button></li>
     </ul>
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Закрытие заказа</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p>Название заказа: {{orders[orderToOpen].title}}</p>
+            <p>Описание заказа: {{orders[orderToOpen].description}}</p>
+            <p>Дедлайн заказа: {{orders[orderToOpen].deadline}}</p>
+            <p>Ревью заказа: {{orders[orderToOpen].review}}</p>
+            <p>Оценка исполнителю:</p>
+            <ngb-rating [rate]="orders[orderToOpen].rating" [max] = '5'></ngb-rating>
+            <div class="form-group">
+                <label for="dateOfBirth">Комментарий</label>
+                <div class="input-group">
+                  <textarea [(ngModel)] = "comment" name="comment" class="form-control"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); onSubmit()">Закрыть</button>
+        </div>
+    </ng-template>
 </div>
 
