--- a/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
+++ b/frontend/client/src/app/pages/admin/admin-page/admin-page.component.html
@@ -8,7 +8,7 @@
         
     </div>
     <ul *ngIf = "returnedOrders$ | async as orders" class="list-group">
-        <li *ngFor = "let order of orders" class="list-group-item">{{order.title}} <button class="btn btn-lg btn-outline-primary" (click)="open(content); chooseOrder(i)">Закрыть</button></li>
+        <li *ngFor = "let order of orders; let i = index" class="list-group-item">{{order.title}} <button class="btn btn-lg btn-outline-primary" (click)="open(content); chooseOrder(i)">Закрыть</button></li>
     </ul>
     <ng-template #content let-modal>
         <div class="modal-header">
@@ -19,6 +19,8 @@
         </div>
         <div class="modal-body">
             <p>Название заказа: {{orders[orderToOpen].title}}</p>
+            <p>ID заказчика: {{orders[orderToOpen].customer}}</p>
+            <p>ID исполнителя: {{orders[orderToOpen].executor}}</p>
             <p>Описание заказа: {{orders[orderToOpen].description}}</p>
             <p>Дедлайн заказа: {{orders[orderToOpen].deadline}}</p>
             <p>Ревью заказа: {{orders[orderToOpen].review}}</p>
@@ -32,7 +34,8 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); onSubmit()">Закрыть</button>
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); closeOrder()">Пометить как верное</button>
+            <button type="button" class="btn btn-dark" (click)="modal.close('Save click'); moveBack()">Отправить заказчику</button>
         </div>
     </ng-template>
 </div>
