--- a/frontend/client/src/app/pages/personal/components/output-orders/output-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/output-orders/output-orders.component.html
@@ -1,8 +1,5 @@
 <p>Выполненные для вас заказы</p>
-<ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
+<ul *ngIf = "orders$ | async as orders" class="list-group">
+    <li *ngFor = "let order of orders" class="list-group-item">{{order.title}}</li>
+    
 </ul>
