--- a/frontend/client/src/app/pages/users-list/list/users/users.component.html
+++ b/frontend/client/src/app/pages/users-list/list/users/users.component.html
@@ -9,7 +9,7 @@
     <li *ngFor = "let user of users" (click) = "navigateToUser(user.id)" routerLink = "/user/1" class="list-group-item">
       <div class="row">
         <div class="col-2">
-          <img [src]="user.profile.avatar" alt="..." class="img-thumbnail border-0">
+          <img [src]="'http://127.0.0.1:8005' + user.profile.avatar" alt="..." class="img-thumbnail border-0">
         </div>
         <div class="col-10">
           <div class="row">{{user.first_name}} {{user.last_name}}</div>
