--- a/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/process-orders/process-orders.component.html
@@ -1,4 +1,4 @@
-<p>Открытые вами заказы</p>
+<p>Открытые для вас заказы</p>
 <ul class="list-group">
     <li class="list-group-item">Cras justo odio<button type="button" class="btn btn-primary">Закрыть</button></li>
     <li class="list-group-item">Dapibus ac facilisis in</li>
