--- a/frontend/client/src/app/pages/auth/login/login.component.html
+++ b/frontend/client/src/app/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
         <div class="form-group">
-            <label for="exampleInputEmail1">Электронная почта</label>
+            <label for="exampleInputEmail1">Логин</label>
             <input formControlName = "username" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="form-group">
