--- a/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
+++ b/frontend/client/src/app/pages/personal/components/user-orders/user-orders.component.html
@@ -1,5 +1,5 @@
 <p>Выполненные вами заказы</p>
 <ul *ngIf = "orders$ | async as orders" class="list-group">
-    <li *ngFor = "let order of orders" class="list-group-item">{{order.title}}</li>
+    <li *ngFor = "let order of orders" class="list-group-item">{{order.title}} <ngb-rating [rate]="order.rating" [max]="5"></ngb-rating></li>
     
 </ul>
