--- a/frontend/client/src/app/pages/personal/components/orders-to-approve/orders-to-approve.component.html
+++ b/frontend/client/src/app/pages/personal/components/orders-to-approve/orders-to-approve.component.html
@@ -18,6 +18,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); approveOrder()">Подтвердить</button>
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click'); sendToAdmin()">Отправить на рассмотрение</button>
+    <button type="button" class="btn btn-dark" (click)="modal.close('Save click'); sendToAdmin()">Отправить на рассмотрение</button>
   </div>
 </ng-template>
