--- a/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
+++ b/frontend/client/src/app/pages/personal/personal-page/personal-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col-4">
             <app-user-info></app-user-info>
         </div>
-        <div class="col">
+        <div class="col-8">
             <div class="btn-group " role="group" aria-label="Basic outlined example">
                 <div >
                     <button *ngFor = 'let status of statuses' type="button" class="btn btn-outline-primary" (click) = 'setTable(status.id)'>{{status.value}}</button>
@@ -12,12 +12,12 @@
                 
             </div>
             <div class="row">
-                <app-user-orders id="table0" *ngIf="chosenTable==0"></app-user-orders>
-                <app-output-orders *ngIf="chosenTable==1"></app-output-orders>
-                <app-opened-customer-orders *ngIf="chosenTable==2"></app-opened-customer-orders>
-                <app-process-orders *ngIf="chosenTable==3"></app-process-orders>
-                <app-returned-orders *ngIf="chosenTable==4"></app-returned-orders>
-                <app-orders-to-approve *ngIf="chosenTable==5"></app-orders-to-approve>
+                <app-user-orders id="table0" *ngIf="chosenTable==0" class="w-100"></app-user-orders>
+                <app-output-orders *ngIf="chosenTable==1" class="w-100"></app-output-orders>
+                <app-opened-customer-orders *ngIf="chosenTable==2" class="w-100"></app-opened-customer-orders>
+                <app-process-orders *ngIf="chosenTable==3" class="w-100"></app-process-orders>
+                <app-returned-orders *ngIf="chosenTable==4" class="w-100"></app-returned-orders>
+                <app-orders-to-approve *ngIf="chosenTable==5" class="w-100"></app-orders-to-approve>
             </div>
         </div>
         
